fixing table cell text alignment in j3

--- a/newsrc/code/media/com_acctexp/less/aec/joomla3-override.less
+++ b/newsrc/code/media/com_acctexp/less/aec/joomla3-override.less
@@ -41,6 +41,19 @@ nav.navbar-fixed-top-minified {
 	margin-bottom: -16px;
 }
 
+.table th,
+.table td {
+	&.text-right {
+		text-align: right;
+	}
+	&.text-center {
+		text-align: center;
+	}
+	&.text-left {
+		text-align: left;
+	}
+}
+
 .container-main>hr {
 	display: none;
 }
